added dynamic image paths

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -59,7 +59,7 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <img src="img/samples/avatar-1.jpg" alt="..">
+      <%= image_tag 'samples/avatar-1.jpg' %>
       <h2>Jeremy White</h2>
       <div>Candid Platoon</div>
     </div>
@@ -745,7 +745,7 @@
 
 <div>
   <a href="#">
-    <img src="img/samples/logos/RedHat.png">
+    <%= image_tag 'samples/logos/RedHat.png' %>
   </a>
 
   <a href="#">
