changed color scheme

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -36,12 +36,12 @@
       <section class="section" id="home">
         <div class="inner">
           <div class="content">
-            <h1>Expert CONF 2013</h1>
+            <h1>RUBY CONFERENCE</h1>
             <h2>First-class conference for experts, bringing you 
               top speakers, the hottest topics and an unbeatable atmosphere.</h2>
 
-            <h3>22th - 24th November 2013</h3>
-            <h4>Seattle, Washington</h4>
+            <h3>20th of May, 2015</h3>
+            <h4>Bangkok, Thailand</h4>
             <div>
               <a href="#" class="btn btn-default btn-lg">Get Brochure</a>
               <a href="#register" class="btn btn-primary btn-lg">Get Your <span>Ticket</span></a>
@@ -732,6 +732,9 @@
 
 <div class="map-canvas">
   <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=2211%2BAlaskan%2BWay%2BPier%2B66%2BSeattle%2C%2BWashington%2B98121%2BUSA&ie=UTF8&z=16&t=m&iwloc=near&output=embed"></iframe>
+
+
+
 </div>          </div><!-- /content -->
         </div><!-- /inner -->
       </section><!-- /section -->
@@ -841,8 +844,13 @@
       </div><!-- /row -->
 
       <hr>
-
-      <div class="row">
+      <center>
+        <h2 style="color: white">
+          *Attendance is free of charge
+        </h2>
+      </center>
+    
+<!--       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4">
           <select id="ticket">
             <option>1 Ticket</option>
@@ -853,9 +861,9 @@
             <option>15 Tickets</option>
             <option>20 Tickets</option>
           </select>
-        </div>
+        </div> -->
 
-        <div class="col-lg-9 col-md-9 col-sm-8 col-xs-8">
+<!--         <div class="col-lg-9 col-md-9 col-sm-8 col-xs-8">
           <button class="btn btn-info btn-lg btn-block">Pay Now <span>$</span><span id="totalPrice">95</span></button>
         </div>
       </div>
@@ -864,7 +872,7 @@
         <div class="col-lg-12">
           <div><img class="pull-right" src="img/credit-cards.png" alt="Payment processor accepted"></div>
         </div>
-      </div>
+      </div> -->
     </form>
 
   </div>
