changed brand title

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -25,9 +25,9 @@
 <div class="hidden-xs">
       <h1 id="logo">
         <a href="./">
-          <span class="line1">EXPERT</span>
-          <span class="line2">CONF</span>
-          <span class="line3">2013</span>
+          <span class="line1">RUBY</span>
+          <span class="line2">CON</span>
+          <span class="line3">2015</span>
         </a>
       </h1>
     </div>
