Added dynamic picture asset routes and changed map location

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -43,7 +43,6 @@
             <h3>20th of May, 2015</h3>
             <h4>Bangkok, Thailand</h4>
             <div>
-              <a href="#" class="btn btn-default btn-lg">Get Brochure</a>
               <a href="#register" class="btn btn-primary btn-lg">Get Your <span>Ticket</span></a>
             </div>
           </div><!-- /content -->
@@ -67,7 +66,7 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <img src="img/samples/avatar-2.jpg" alt="...">
+      <%= image_tag 'samples/avatar-2.jpg' %>
       <h2>Alex Whitespoon</h2>
       <div>Open Source Fanatics</div>
     </div>
@@ -75,7 +74,7 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <img src="img/samples/avatar-3.jpg" alt="...">
+      <%= image_tag 'samples/avatar-3.jpg' %>
       <h2>Stephanie Sims</h2>
       <div>BlackHat Linux Inc.</div>
     </div>
@@ -83,7 +82,7 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <img src="img/samples/avatar-4.jpg" alt="...">
+      <%= image_tag 'samples/avatar-4.jpg' %>
       <h2>David Blane</h2>
       <div>Open Source Fanatics</div>
     </div>
@@ -91,7 +90,7 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <img src="img/samples/avatar-5.jpg" alt="...">
+      <%= image_tag 'samples/avatar-5.jpg' %>
       <h2>Jason Woods</h2>
       <div>Designer Wall Inc.</div>
     </div>
@@ -99,7 +98,7 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <img src="img/samples/avatar-6.jpg" alt="...">
+      <%= image_tag 'samples/avatar-6.jpg' %>
       <h2>Lynda Elric</h2>
       <div>Smashing the Wall</div>
     </div>
@@ -107,7 +106,7 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <img src="img/samples/avatar-7.jpg" alt="..">
+      <%= image_tag 'samples/avatar-7.jpg' %>
       <h2>Rick Taylor</h2>
       <div>Breaking the Habits Inc.</div>
     </div>
@@ -115,7 +114,7 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <img src="img/samples/avatar-8.jpg" alt="...">
+      <%= image_tag 'samples/avatar-8.jpg' %>
       <h2>Anna Buggati</h2>
       <div>Positive Design Inc.</div>
     </div>
@@ -123,7 +122,7 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <img src="img/samples/avatar-9.jpg" alt="...">
+      <%= image_tag 'samples/avatar-9.jpg' %>
       <h2>David Lim</h2>
       <div>Source Code Inc.</div>
     </div>
@@ -157,7 +156,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/register.jpg">
+        <%= image_tag 'samples/register.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">08.00 AM</div>
@@ -170,7 +169,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/opening.jpg">
+        <%= image_tag 'samples/opening.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">09.00 AM</div>
@@ -183,7 +182,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-3.jpg">
+        <%= image_tag 'samples/avatar-3.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -203,7 +202,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-4.jpg">
+        <%= image_tag 'samples/avatar-4.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -223,7 +222,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-5.jpg">
+       <%= image_tag 'samples/avatar-5.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -243,7 +242,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/lunch.jpg">
+        <%= image_tag 'samples/lunch.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">01.00 PM</div>
@@ -256,7 +255,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-6.jpg">
+        <%= image_tag 'samples/avatar-6.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -276,7 +275,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-7.jpg">
+        <%= image_tag 'samples/avatar-7.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -296,7 +295,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-8.jpg">
+        <%= image_tag 'samples/avatar-8.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -316,7 +315,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/break.jpg">
+        <%= image_tag 'samples/break.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">05.00 PM</div>
@@ -329,7 +328,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-9.jpg">
+        <%= image_tag 'samples/avatar-9.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -355,7 +354,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/opening.jpg">
+        <%= image_tag 'samples/opening.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">09.00 AM</div>
@@ -368,7 +367,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-3.jpg">
+        <%= image_tag 'samples/avatar-3.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -388,7 +387,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-4.jpg">
+        <%= image_tag 'samples/avatar-4.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -408,7 +407,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-5.jpg">
+        <%= image_tag 'samples/avatar-5.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -428,7 +427,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/lunch.jpg">
+        <%= image_tag 'samples/lunch.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">01.00 PM</div>
@@ -441,7 +440,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-6.jpg">
+       <%= image_tag 'samples/avatar-6.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -461,7 +460,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-7.jpg">
+        <%= image_tag 'samples/avatar-7.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -481,7 +480,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-8.jpg">
+        <%= image_tag 'samples/avatar-8.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -501,7 +500,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/break.jpg">
+        <%= image_tag 'samples/break.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">05.00 PM</div>
@@ -514,7 +513,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-9.jpg">
+        <%= image_tag 'samples/avatar-9.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -540,7 +539,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/opening.jpg">
+        <%= image_tag 'samples/opening.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">09.00 AM</div>
@@ -553,7 +552,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-3.jpg">
+        <%= image_tag 'samples/avatar-3.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -573,7 +572,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-4.jpg">
+        <%= image_tag 'samples/avatar-4.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -593,7 +592,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-5.jpg">
+        <%= image_tag 'samples/avatar-5.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -613,7 +612,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/lunch.jpg">
+        <%= image_tag 'samples/lunch.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">01.00 PM</div>
@@ -626,7 +625,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-6.jpg">
+        <%= image_tag 'samples/avatar-6.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -646,7 +645,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-7.jpg">
+        <%= image_tag 'samples/avatar-7.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -666,7 +665,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-8.jpg">
+        <%= image_tag 'samples/avatar-8.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -686,7 +685,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/break.jpg">
+        <%= image_tag 'samples/break.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">05.00 PM</div>
@@ -699,7 +698,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <img src="img/samples/avatar-9.jpg">
+        <%= image_tag 'samples/avatar-9.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -727,13 +726,13 @@
         <div class="inner">
           <div class="content">
             <h1>Venue</h1>
-            <h2>Bell Harbor International Conference Center</h2>
-<h3>Seattle, Washington</h3>
+            <h2>Pocket Play Labs</h2>
+<h3>Bangkok, Thailand</h3>
 
 <div class="map-canvas">
-  <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=2211%2BAlaskan%2BWay%2BPier%2B66%2BSeattle%2C%2BWashington%2B98121%2BUSA&ie=UTF8&z=16&t=m&iwloc=near&output=embed"></iframe>
+  <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Bangkok%2BPocket%2BPlay%2BLabs&ie=UTF8&z=15&t=m&iwloc=near&output=embed"></iframe>
 
-
+<!-- 2211%2BAlaskan%2BWay%2BPier%2B66%2BSeattle%2C%2BWashington%2B98121%2BUSA -->
 
 </div>          </div><!-- /content -->
         </div><!-- /inner -->
@@ -750,9 +749,9 @@
   <a href="#">
     <%= image_tag 'samples/logos/RedHat.png' %>
   </a>
-
+  
   <a href="#">
-    <img src="img/samples/logos/Ubuntu.png">
+    <%= image_tag 'samples/logos/Ubuntu.png' %>
   </a>
 </div>
 
@@ -762,23 +761,23 @@
 
 <div>
   <a href="#">
-    <img src="img/samples/logos/Google.png">
+    <%= image_tag 'samples/logos/Google.png' %>
   </a>
 
   <a href="#">
-    <img src="img/samples/logos/Rackspace.png">
+    <%= image_tag 'samples/logos/Rackspace.png' %>
   </a>
 
   <a href="#">
-    <img src="img/samples/logos/NewRelic.png">
+    <%= image_tag 'samples/logos/NewRelic.png' %>
   </a>
 
   <a href="#">
-    <img src="img/samples/logos/Amazon.png">
+    <<%= image_tag 'samples/logos/Amazon.png' %>
   </a>
 
   <a href="#">
-    <img src="img/samples/logos/CloudStack.png">
+    <%= image_tag 'samples/logos/CloudStack.png' %>
   </a>
 </div>          </div><!-- /content -->
         </div><!-- /inner -->
