--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -730,9 +730,7 @@
 <h3>Bangkok, Thailand</h3>
 
 <div class="map-canvas">
-  <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=2211%2BAlaskan%2BWay%2BPier%2B66%2BSeattle%2C%2BWashington%2B98121%2BUSA&ie=UTF8&z=15&t=m&iwloc=near&output=embed"></iframe>
-
-<!-- 2211%2BAlaskan%2BWay%2BPier%2B66%2BSeattle%2C%2BWashington%2B98121%2BUSA -->
+  <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Bangkok%2BPocket%2BPlay%2BLabs&ie=UTF8&z=15&t=m&iwloc=near&output=embed"></iframe>
 
 </div>          </div><!-- /content -->
         </div><!-- /inner -->
