--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -37,9 +37,20 @@
         <div class="inner">
           <div class="content">
             <h1>RUBY CONFERENCE</h1>
-            <h2>First-class conference for experts, bringing you 
-              top speakers, the hottest topics and an unbeatable atmosphere.</h2>
+            <p class="sizemic">
+RubyCon BKK is a monthly conference focusting on the Ruby language invented by Yukihiro “Matz” Matsumoto.
+Ruby is an Open Source langauge whogained a lot of popularity after the Ruby on Rails framework was released 
+in 2006, developed by the Danish David Heinemeier Hansson who used it to write the now world famous Basecamp.
 
+This technology is used by many of the worlds biggest tech companies in the world because of its abilty for rapid development 
+and its ability to shorten the time to market for your product. Wanne learn tech? Start here dude, we are very friendly and we help beginners get started and CTOs to get smarter.
+Thats what the Ruby commmunity does!
+
+Ruby on Rails developers are now the highest paying development jobs in the tech industry today, and its interest is still growing.
+
+Amongst the companies use Ruby for their products are: Amazon, Twitter, Hulu, GroupOn, Shopify, Cruncbase, Bloomberg, Indiegogo, 
+Airbnb, SoundCloud, Heroku, Zendesk, GutHub... Well I think you get it already....
+            </p>
             <h3>20th of May, 2015</h3>
             <h4>Bangkok, Thailand</h4>
             <div>
@@ -741,6 +752,69 @@
         <div class="inner">
           <div class="content">
             <h1>Sponsors</h1>
+
+
+            <div class="statement">
+              <p>
+                If you guys can help us out a <i>little</i> bit, it would mean the world to us. We are <i>literally</i> paying out of our own pockets now to help 
+                grow the startup community in Bangkok, and we can't do these events much longer on our own as they continue to grow so fast.
+                The tech scene in Bangkok is <b>SCREAMING</b> for developers and we literally drag them out from universities and every other cave they 
+                live in to get them to open their eyes and see how much the world has to offer them.
+              </p>
+              <p>
+                Just try to imagine all the things you take for granted that they might not even have heard about. That thing might be <b>YOUR</b> service!
+                Most people have heard about "the Cloud", big data, and how important metrics are but have they tried Ninefold, Mixpanel,intercom.io 
+                or even know about Microsoft's BizSpark program?
+              </p>
+              <p>
+                This is <b>YOUR</b> chance to reach the startup community in a city of 15 million people with just a few hundred bucks you can increase your 
+                client base in a place you never even thought about yesterday! Please help us help you by raising awareness of your products. This is how we all thrive together!
+              </p>
+
+              <center>
+                <b>
+                  Vouchers only
+                </b>
+              </center>
+              <p>
+                Logo on the website as a voucher sponsor
+              </p>
+              <center>
+                <b>
+                  Silver Packages
+                </b>
+              </center>
+              <p>
+                $150 USD Your logos on flyers, web site and you can pitch for job openings after the speakers
+              </p>
+              <center>
+                <b>
+                  Gold Packages
+                </b>
+              </center>
+              <p>
+                $250 Your big size logos on flyers, Gold sponsor status web site and our newsletters and T-shirts, short bio of your company on the webpage and a link back to your site
+              </p>
+              <center>
+                <b>
+                  Platinum Packages
+                </b>
+              </center>
+              <p>
+                $500 You're insanely big size logos on flyers, Platinum sponsor status web site and our newsletters and T-shirts, short bio of your company on the webpage and link to your site AND eternal gratitude.
+              </p>
+              <center>
+                <b>
+                  What do we use the money for?
+                </b>
+              </center>
+              <p>
+                Prizes, marketing of the conference, speaker's costs and the rest goes into a fund to fund the next meetup.
+                This is a <b>PURE</b> non-profit venture and all money is spent on developing technical expertise and networking.
+                It all goes back to you guys eventually, it's like carbon. ;)  
+              </p>            
+            </div>
+
             <h2>Platinum Sponsors</h2>
 
 <div>
@@ -777,16 +851,50 @@
   <a href="#">
     <%= image_tag 'samples/logos/CloudStack.png' %>
   </a>
-</div>          </div><!-- /content -->
+</div>          
+  </div><!-- /content -->
+
         </div><!-- /inner -->
       </section><!-- /section -->
-
-
 
       <section class="section" id="register">
         <div class="inner">
           <div class="content">
-            <h1>Registration</h1>
+
+
+        <div class="statement" style="color: white">
+      
+          
+        <h1 style="margin: 0px;">
+          Free Macbook!
+        </h1>
+        <center>
+          <h2 style="color: white; font-size: 36px; margin-bottom: 36px;">
+            What the hell?
+          </h2>
+        </center>
+        <center>
+          <b>
+            Yes, its true. We are giving away a <i>brand new fully specked</i> Macbook Air to you guys just for showing up.
+          </b>
+          <br><br>
+        </center>
+        <center>
+          <i style="font-size: 24px;">Yeah, right, whats the catch?</i> <br> <br>
+        </center>
+        <p>
+          No catch! Just register, and put your business card in the jar when you show up
+          and after the speakers are done we will draw out a business card (if you dont have one just put your name in a note) 
+          and that girl, or guy, walks out with a brand new Mac Air. Even we don't have that!
+        </p>
+        <p>
+          So register today, and it will be you that can show off to your friends what you won just by showing up at Ekkamai one random Wednesday!
+        </p>
+
+
+
+        </div>
+            <h1>Free Registration</h1>
             <div class="row content">
 
   <div class="col-lg-10 col-lg-push-1">
