--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -741,7 +741,7 @@ Airbnb, SoundCloud, Heroku, Zendesk, GutHub... Well I think you get it already..
 <h3>Bangkok, Thailand</h3>
 
 <div class="map-canvas">
-  <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Bangkok%2BPocket%2BPlay%2BLabs&ie=UTF8&z=15&t=m&iwloc=near&output=embed"></iframe>
+  <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Bangkok%2BPocket%2BPlay%2BLabs&ie=UTF8&z=15&t=m&iwloc=near&output=embed"></iframe>
 
 </div>          </div><!-- /content -->
         </div><!-- /inner -->
