--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,11 @@
 <html>
 <head>
   <title>BangkokRb</title>
-  <link href="https://fonts.googleapis.com/css?family=Andada" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Andada" rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
+  <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
 </head>
 <body>
 
